# resume-chatbot

./: CLAUDE.md  PHASE3_PLAN.md  PHASE_1_PLAN.md  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e393e7afcb26_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  context.py  logger.py  rate_limit.py  sanitization.py
backend/app/db/: models.py  session.py
backend/app/db/repositories/: conversation.py  message.py
backend/app/models/: conversation.py  websocket.py
backend/app/services/: conversation.py  conversation_db.py  llm_client.py  prompts.py  resume_loader.py  token_counter.py
backend/data/: resume.json
backend/tests/: conftest.py  test_config_validation.py  test_context.py  test_conversation.py  test_conversation_db.py  test_conversation_repository.py  test_db_models.py  test_integration.py  test_llm_client.py  test_logging.py  test_main.py  test_message_repository.py  test_prompts.py  test_pruning.py  test_rate_limit.py  test_resume_loader.py  test_sanitization.py  test_token_counter.py  test_websocket.py
